# GymVips

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml
docs/: Makefile  conf.py  index.rst  make.bat  python_example.rst
src/: README.md  envpool.h  image_manip.hpp  main.cpp  py_envpool.cpp  region.cpp  test.cpp  vipsenv.h
src/py_src/: envpool.py  vipsenv.py
tests/: Makefile  test  test.py  test_cpp_api.cpp  test_python_api.py
